# AmsterdamUMCdb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.SAMPLE.ini  requirements.txt  setup.cfg  setup.py
amsterdamumcdb/: __init__.py  amsterdamumcdb.py  bigquery.py  cohorts.py  connections.py  dictionary.py  fluidbalance.py  plotting.py  scores.py  util.py
amsterdamumcdb/dictionary/: dictionary.csv
amsterdamumcdb/dictionary/legacy/: dictionary.csv
amsterdamumcdb/sql/common/: bilirubin.sql  gcs.sql  (+11 more)
bigquery/: README.md  getting_started.ipynb
bigquery/legacy/: getting_started.ipynb
concepts/: README.md
concepts/diagnosis/: README.md  reason_for_admission.ipynb
concepts/lifesupport/: README.md  amsterdamumcdb.py  mechanical_ventilation.ipynb  renal_replacement_therapy.ipynb  vasopressors_inotropes.ipynb
concepts/severityscores/: README.md  apache_ii.ipynb  sofa.ipynb
courses/: README.md
courses/2021-11-vu-ml-reasoning/: FAQ.md  README.md  getting_started.ipynb
courses/2022-11-vu-ml-reasoning/: README.md
courses/2023-11-vu-ml-reasoning/: README.md
courses/2024-11-vu-ml-reasoning/: README.md
courses/2025-11-vu-ml-reasoning/: README.md
data/: README.md
datathons/: README.md
datathons/2020-01-milan-datathon-colab/: README.md  admissions.ipynb  drugitems.ipynb  freetextitems.ipynb  listitems.ipynb  numericitems.ipynb  procedureorderitems.ipynb  processitems.ipynb
datathons/2021-04-amsterdam-datathon-colab/: FAQ.md  README.md  getting_started.ipynb
datathons/2022-05-amsterdam-datathon-colab/: README.md
datathons/2023-05-amsterdam-datathon-colab/: README.md
datathons/2024-05-amsterdam-datathon-colab/: README.md
datathons/2025-01-esicm-datathon-colab/: README.md
dictionaries/: README.md  create_dictionaries.ipynb
omop/: dictionary.py  dump.py  import.py
paper/: paper-fig2-data-diversity.ipynb  paper-table2-re-identification-risk.ipynb
setup-amsterdamumcdb/: README.md  setup-amsterdamumc.ipynb
setup-amsterdamumcdb/postgres/: postgres-create-index.sql  postgres-create-tables.sql  postgres-load-data-csv.sql
tables/: README.md  admissions.ipynb  drugitems.ipynb  freetextitems.ipynb  listitems.ipynb  numericitems.ipynb  procedureorderitems.ipynb  processitems.ipynb
tests/: test_cohorts.py  test_scores.py  test_util.py
tools/: README.md  unzip.ipynb  zip.ipynb
tutorials/esicm-lives-2021/: amsterdamumcdb_charts.py  esicm-lives-2021.ipynb
(+32 files in other folders)
