[metadata]
name = amsterdamumcdb
version = 0.1.5
author = Amsterdam UMC Laboratory for Critical Care Computational Intelligence
author_email = p.thoral@amsterdamumc.nl
description = Common functions for data exploration on AmsterdamUMCdb
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/AmsterdamUMC/AmsterdamUMCdb
project_urls =
    Bug Tracker = https://github.com/AmsterdamUMC/AmsterdamUMCdb/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Medical Science Apps.
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    AmsterdamUMCdb
    Intensive Care unit
    Critical Care
    Medical
    Patient Data

[options]
packages = find:
python_requires = >=3